Refactor ComissoesController and DashboardController for improved readability and maintainability
- In ComissoesController:
  - Introduced constants for status messages and date formats.
  - Enhanced table configuration with clearer methods for setting up columns and filtering.
  - Improved date picker interaction handling.
  - Refactored data loading and UI update logic for better clarity.
  - Added utility methods for formatting dates and handling BigDecimal conversions.

- In DashboardController:
  - Added constants for status messages and loading messages.
  - Refactored data loading logic to improve clarity and separation of concerns.
  - Simplified table column configuration and search filtering.
  - Enhanced user experience with motivational loading messages during data processing.