@@ -6,6 +6,7 @@ import br.com.poderfinanceiro.app.utils.ContatoUtils;
 import br.com.poderfinanceiro.app.utils.DocumentoUtils;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
+import javafx.concurrent.Task;
 import javafx.fxml.FXML;
 import javafx.scene.control.Label;
 import javafx.scene.control.TableCell;
@@ -13,17 +14,25 @@ import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableRow;
 import javafx.scene.control.TableView;
 import javafx.scene.control.TextField;
-import javafx.concurrent.Task;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.function.Function;
 import java.util.function.Supplier;
 
 @Component
 public class ClientesListController {
 
-    private final ProponenteService proponenteService;
-    private final MainController mainController;
+    // =========================================================================
+    // CONSTANTES (Clean Code)
+    // =========================================================================
+    private static final String MSG_CARREGANDO_BASE = "Carregando base de clientes...";
+    private static final String MSG_TRIAGEM_BUSCA = "Realizando triagem da busca...";
+    private static final String MSG_TOTAL_REGISTROS = "Total: %d contato(s)";
+
+    // =========================================================================
+    // DEPENDÊNCIAS DE UI E FXML
+    // =========================================================================
     @FXML
     private TableView<ProponenteModel> tabelaClientes;
     @FXML
@@ -41,59 +50,65 @@ public class ClientesListController {
     @FXML
     private TableColumn<ProponenteModel, String> colClassificacao;
 
-    // Lista observável que o JavaFX usa para atualizar a tabela em tempo real
-    private ObservableList<ProponenteModel> listaContatos = FXCollections.observableArrayList();
+    // =========================================================================
+    // INJEÇÃO DE DEPENDÊNCIAS E ESTADO DA CLASSE
+    // =========================================================================
+    private final ProponenteService proponenteService;
+    private final MainController mainController;
+    private final ObservableList<ProponenteModel> listaContatos = FXCollections.observableArrayList();
 
-    public ClientesListController(ProponenteService proponenteService,
-            MainController mainController,
-            LeadController leadController) {
+    public ClientesListController(ProponenteService proponenteService, MainController mainController) {
         this.proponenteService = proponenteService;
         this.mainController = mainController;
     }
 
+    // =========================================================================
+    // INICIALIZAÇÃO
+    // =========================================================================
     @FXML
     public void initialize() {
         tabelaClientes.setItems(listaContatos);
-        configurarFormatacaoCpfNaTabela();
-        configurarFormatacaoTelefoneNaTabela();
+        configurarColunas();
+        configurarInteracaoTabela();
+        carregarDados();
+    }
 
+    private void configurarColunas() {
+        aplicarFormatadorColuna(colCpf, DocumentoUtils::formatarCpf);
+        aplicarFormatadorColuna(colTelefone, ContatoUtils::formatarTelefone);
+    }
+
+    private void configurarInteracaoTabela() {
         tabelaClientes.setRowFactory(tv -> {
             TableRow<ProponenteModel> row = new TableRow<>();
             row.setOnMouseClicked(event -> {
-                if (event.getClickCount() == 2 && (!row.isEmpty())) {
-                    ProponenteModel selecionado = row.getItem();
-                    mainController.abrirClienteNoWorkspace(selecionado);
+                if (event.getClickCount() == 2 && !row.isEmpty()) {
+                    mainController.abrirClienteNoWorkspace(row.getItem());
                 }
             });
             return row;
         });
-
-        // 1. O primeiro exame: busca inicial ao abrir
-        carregarDados();
     }
 
-    /**
-     * Aciona o maqueiro para buscar toda a carteira de clientes.
-     */
+    // =========================================================================
+    // EVENTOS DE TELA E BUSCA
+    // =========================================================================
     public void carregarDados() {
         executarTarefaAssincrona(
-                () -> proponenteService.listarMinhaCarteira(),
-                "Carregando base de clientes...");
+                proponenteService::listarMinhaCarteira,
+                MSG_CARREGANDO_BASE);
     }
 
-    /**
-     * Aciona o maqueiro para uma busca específica por termo.
-     */
     @FXML
     private void handleBusca() {
         String termo = txtBusca.getText();
 
-        if (termo == null || termo.trim().isEmpty()) {
+        if (termo == null || termo.isBlank()) {
             carregarDados();
         } else {
             executarTarefaAssincrona(
                     () -> proponenteService.buscaRapida(termo.trim()),
-                    "Realizando triagem da busca...");
+                    MSG_TRIAGEM_BUSCA);
         }
     }
 
@@ -102,78 +117,60 @@ public class ClientesListController {
         mainController.irParaNovoContato();
     }
 
+    // =========================================================================
+    // UTILITÁRIOS INTERNOS E FORMATAÇÃO (DRY & SRP)
+    // =========================================================================
+    private void atualizarContador() {
+        lblTotalRegistros.setText(String.format(MSG_TOTAL_REGISTROS, listaContatos.size()));
+    }
+
     /**
-     * O MOTOR DA CLÍNICA: Método auxiliar que gerencia o Maqueiro (Task)
-     * e a Sala de Espera (Loading) de forma genérica.
+     * Aplica formatação visual em células de tabela de forma reutilizável.
      */
-    private void executarTarefaAssincrona(Supplier<List<ProponenteModel>> busca, String mensagem) {
-        // A. Acende a luz da Sala de Espera no MainController
+    private <T> void aplicarFormatadorColuna(TableColumn<ProponenteModel, T> coluna, Function<T, String> formatador) {
+        coluna.setCellFactory(tc -> new TableCell<>() {
+            @Override
+            protected void updateItem(T item, boolean empty) {
+                super.updateItem(item, empty);
+                if (empty || item == null) {
+                    setText(null);
+                    setGraphic(null);
+                } else {
+                    setText(formatador.apply(item));
+                }
+            }
+        });
+    }
+
+    /**
+     * O MOTOR DA CLÍNICA: Gerencia o Maqueiro (Task) e a Sala de Espera (Loading).
+     */
+    private void executarTarefaAssincrona(Supplier<List<ProponenteModel>> acaoBusca, String mensagem) {
         mainController.mostrarLoading(mensagem);
 
-        // B. Prepara o Maqueiro (A Task)
         Task<List<ProponenteModel>> task = new Task<>() {
             @Override
-            protected List<ProponenteModel> call() throws Exception {
-                // Trabalho pesado fora da recepção (UI Thread)
-                return busca.get();
+            protected List<ProponenteModel> call() {
+                return acaoBusca.get();
             }
         };
 
-        // C. O que fazer ao finalizar o transporte com sucesso
         task.setOnSucceeded(e -> {
-            // Atualiza a lista na recepção (UI Thread)
             listaContatos.setAll(task.getValue());
             atualizarContador();
             mainController.ocultarLoading();
         });
 
-        // D. Caso ocorra uma intercorrência (Erro no Banco)
         task.setOnFailed(e -> {
             mainController.ocultarLoading();
-            task.getException().printStackTrace();
-            // Dica: Aqui você pode chamar um overlay de erro no futuro
+            Throwable erro = task.getException();
+            if (erro != null) {
+                erro.printStackTrace();
+            }
         });
 
-        // E. Dispara o transporte em uma nova linha (Thread)
         Thread thread = new Thread(task);
-        thread.setDaemon(true); // Garante que a thread feche se o app fechar
+        thread.setDaemon(true);
         thread.start();
-    }
-    
-    private void atualizarContador() {
-        lblTotalRegistros.setText("Total: " + listaContatos.size() + " contato(s)");
-    }
-
-    private void configurarFormatacaoCpfNaTabela() {
-        // Usamos o 'setCellFactory' garantindo que o retorno seja o esperado pela
-        // coluna <Proponente, String>
-        colCpf.setCellFactory(tc -> new TableCell<ProponenteModel, String>() {
-            @Override
-            protected void updateItem(String cpf, boolean empty) {
-                super.updateItem(cpf, empty);
-
-                if (empty || cpf == null) {
-                    setText(null);
-                    setGraphic(null);
-                } else {
-                    // Aqui usamos o seu utilitário DRY
-                    setText(DocumentoUtils.formatarCpf(cpf));
-                }
-            }
-        });
-    }
-
-    private void configurarFormatacaoTelefoneNaTabela() {
-        colTelefone.setCellFactory(tc -> new TableCell<>() {
-            @Override
-            protected void updateItem(String tel, boolean empty) {
-                super.updateItem(tel, empty);
-                if (empty || tel == null) {
-                    setText(null);
-                } else {
-                    setText(ContatoUtils.formatarTelefone(tel));
-                }
-            }
-        });
     }
 }
